# MolAgentLight

./: CHANGELOG.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
AutoMol/automol/: pyproject.toml
AutoMol/automol/automol/: stacking.py  vocab.json
AutoMol/automol/automol/tokenization/: __init__.py  smiles_tokenizer.py
MolAgent-Marketplace/: README.md
MolAgent-Marketplace/.claude-plugin/: marketplace.json
MolAgent-Marketplace/MolAgentLight/: CLAUDE.md  README.md
MolAgent-Marketplace/MolAgentLight/.claude-plugin/: plugin.json
MolAgent-Marketplace/MolAgentLight/AutoMol/automol/: pyproject.toml
MolAgent-Marketplace/MolAgentLight/AutoMol/automol/automol/: plotly_util.py  stacking_util.py
MolAgent-Marketplace/MolAgentLight/commands/: automol-status.md
MolAgent-Marketplace/MolAgentLight/hooks/: setup-automol-env.sh
MolAgent-Marketplace/MolAgentLight/skills/predict/: SKILL.md
MolAgent-Marketplace/MolAgentLight/skills/predict/scripts/: predict.py
MolAgent-Marketplace/MolAgentLight/skills/train-pipeline/: SKILL.md  reference.md
MolAgent-Marketplace/MolAgentLight/skills/train-pipeline/scripts/: detect_dataset.py  evaluate_regression_model.py  generate_model_card.py  merge_models.py  model_registry.py  split_data.py  train_regression_advanced.py  train_regression_classification.py
MolAgent-Marketplace/MolAgentLight/skills/train-pipeline/steps/: continue-handler.md  step-0-detect.md  step-1-configure.md  step-2-prepare.md  step-3-split.md  step-4-train.md  step-5-evaluate.md  step-6-review.md  step-7-refit.md  step-8-complete.md
MolAgent-Marketplace/MolAgentLight/skills/visualize/: SKILL.md
MolAgent-Marketplace/MolAgentLight/skills/visualize/scripts/: generate_dashboard.py
MolAgent-Marketplace/plugins/molagent-taskmanager/: CLAUDE.md  README.md
MolAgent-Marketplace/plugins/molagent-taskmanager/.claude/: settings.json
MolAgent-Marketplace/plugins/molagent-taskmanager/.claude-plugin/: plugin.json
MolAgent-Marketplace/plugins/molagent-taskmanager/commands/: automol-status.md
MolAgent-Marketplace/plugins/molagent-taskmanager/hooks/: setup-automol-env.sh
MolAgent-Marketplace/plugins/molagent-taskmanager/skills/predict/: SKILL.md
MolAgent-Marketplace/plugins/molagent-taskmanager/skills/train-pipeline/: reference.md
MolAgent-Marketplace/plugins/molagent-taskmanager/skills/visualize/: SKILL.md
MolAgent-Marketplace/plugins/molagent-visualizer/.claude-plugin/: plugin.json
MolAgent-Marketplace/plugins/molagent-visualizer/scripts/: generate_dashboard.py
MolAgent-TaskManager/: CLAUDE.md  README.md
MolAgent-TaskManager/.claude-plugin/: plugin.json
MolAgent-TaskManager/hooks/: setup-automol-env.sh
MolAgent-TaskManager/skills/predict/: SKILL.md  examples.md
MolAgent-TaskManager/skills/train-pipeline/: SKILL.md  examples.md  reference.md
MolAgent-TaskManager/skills/train-pipeline/scripts/: evaluate_classification_model.py  generate_model_card.py  merge_models.py  prepare_for_classification.py  prepare_for_regression.py  refit_model.py  train_classification.py  train_classification_advanced.py  train_regression_classification_advanced.py
MolAgent-TaskManager/skills/train-pipeline/steps/: step-0-detect.md  step-2-prepare.md  step-3-split.md  step-4-train.md  step-5-evaluate.md  step-7-refit.md  step-8-complete.md
MolAgent-TaskManager/skills/train-pipeline/validators/: validate_pipeline_state.py
(+19 files in other folders)
