[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automol"
version = "1.0.0"
description = "AutoMol: Automated Machine Learning Pipeline for Drug Discovery"
# readme will be set at package level
license = {text = "All rights reserved, Open Analytics NV, 2021-2025"}
authors = [
    {name = "Joris Tavernier", email = "joris.tavernier@openanalytics.eu"},
    {name = "Marvin Steijaert", email = "marvin.steijaert@openanalytics.eu"}
]
maintainers = [
    {name = "Joris Tavernier", email = "joris.tavernier@openanalytics.eu"},
    {name = "Marvin Steijaert", email = "marvin.steijaert@openanalytics.eu"}
]
keywords = [
    "drug-discovery",
    "machine-learning",
    "cheminformatics", 
    "automated-ml",
    "molecular-modeling",
    "qsar"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"
dependencies = [
    # Core scientific computing
    "numpy>=1.21.0",
    "pandas==2.2.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    # Chemistry and molecular modeling
    "rdkit>=2023.9.5",
    # Machine Learning
    "onnxruntime>=1.16.0",
    "hyperopt>=0.2.7",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    # Visualization and reporting
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "bokeh>=2.4.3",
    "jinja2>=3.0.0",
    "kaleido>=0.2.0",
    # PDF generation
    "pdfkit>=1.0.0",
    
    # Utilities
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
    "psutil>=5.8.0",
    "cython>=0.29.0", 
    "pymongo>=4.0.0",
    
    # Progress tracking
    "py3nvml>=0.2.7",
    "IPython>=7.0.0",
    "setuptools==80.8.0",
    # Resource imports
    "importlib-resources>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0", 
    "isort>=5.10.0",
    "flake8>=5.0.0"
]

util = [
    "boto3>=1.20.0",
    "seaborn>=0.11.0",
    "psutil>=5.8.0"
]
[project.urls]
Homepage = "https://github.com/openanalytics/AutoMol"
Repository = "https://github.com/openanalytics/AutoMol"
Documentation = "https://github.com/openanalytics/AutoMol/tree/main/AutoMol"
"Bug Tracker" = "https://github.com/openanalytics/AutoMol/issues"

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["automol*"]
exclude = ["tests*", "docs*", "build*"]

[tool.setuptools.package-data]
"automol" = ["*.jpg", "*.html", "*.csv"]
"automol.pdf_template" = ["*.jpg", "*.html", "*.csv"]

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 100
known_first_party = ["automol"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
